@@ -2,7 +2,7 @@ sdparm (1.02-0.1) unstable; urgency=low
 
   * add block device characteristics VPD page
 
- -- Douglas Gilbert <dgilbert@interlog.org>  Tue, 31 Jul 2007 14:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.org>  Mon, 06 Jul 2007 01:00:00 -0400
 
 sdparm (1.01-0.1) unstable; urgency=low
 
