@@ -2,7 +2,9 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.02 [20070714]
+ChangeLog for sdparm-1.02 [20070806]
+  - support mode page descriptors with
+    <acronym_name>[.<descriptor_num] syntax
   - append relative target port identifier to SAS target
     port address with '-iq' option
   - add solaris port
